--- a/homepage.html
+++ b/homepage.html
@@ -9,18 +9,47 @@
   <body>
     <div class="A">
       <div class="first">
-        <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
-        <a href="https://www.google.com.co/imghp?hl=es-419&tab=wi&ogbl">Imágenes</a>
+        <a class="first-link" href="https://mail.google.com/mail/?tab=wm&ogbl" style="padding-right: 10px;">Gmail</a>
+        <a class="first-link" href="https://www.google.com.co/imghp?hl=es-419&tab=wi&ogbl">Imágenes</a>
       </div>
       <div class="second"> 
-        <img class="a" href="https://www.google.com.co/intl/es-419/about/products?tab=wh" src="./Images/apps-icon.png" alt="app icon">
+        <a class="second-link" href="https://www.google.com.co/intl/es-419/about/products?tab=wh"><img class="a" src="./Images/apps-icon.png" alt="app icon"></a>
       </div>  
       <div class="third">
-        <a href="https://accounts.google.com/ServiceLogin?hl=es-419&passive=true&continue=https://www.google.com/">Iniciar sesión</a>  
+        <a class="third-link" href="https://accounts.google.com/ServiceLogin?hl=es-419&passive=true&continue=https://www.google.com/">Iniciar sesión</a>  
       </div>  
     </div>
     <div class="B">
       <img class="b" src="./Images/Google-logo.png" alt="Google's logo">
     </div>
+    <div class="C">
+      <img class="searcher" src="Images/searcher.png" alt="Google's searcher icon"></div>
+    </div>
+    <div class="D">
+      <div class="first">
+        <a class="fourth-link" href="https://google.com">Buscar con Google</a>
+      </div>
+      <div class="second">
+        <a class="fourth-link" href="https://www.google.com/doodles/">Me siento con suerte</a>
+      </div>
+    </div>
   </body>
+  <footer>
+    <div class="E">
+      <p>Colombia</p>
+    </div>
+    <div class="E">
+      <div class="first-last-flex">
+        <a class="first-link" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjg0Z6975DrAhUulnIEHS77AQkQkdQCCBM&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fes-419_co%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw2BStFRANFglzS08AnLDwkq">Publicidad</a>
+        <a class="first-link" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjg0Z6975DrAhUulnIEHS77AQkQktQCCBQ&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K">Negocios</a>
+        <a class="first-link" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjg0Z6975DrAhUulnIEHS77AQkQkNQCCBU&url=https%3A%2F%2Fabout.google%2F%3Futm_source%3Dgoogle-CO%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&usg=AOvVaw0R9i_MrNQ6svZPqUBXIqUz">Sobre Google</a>
+        <a class="first-link" href="https://google.com/search/howsearchworks/?fg=1">Cómo funciona la búsqueda</a>
+      </div>
+      <div class="second-last-flex">
+        <a class="first-link" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjg0Z6975DrAhUulnIEHS77AQkQ8awCCA8&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Fhl%3Des-419%26fg%3D1&usg=AOvVaw0kHgtbRrD3oGV-KWOzk5Hz">Privacidad</a>
+        <a class="first-link" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjg0Z6975DrAhUulnIEHS77AQkQ8qwCCBA&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Fhl%3Des-419%26fg%3D1&usg=AOvVaw3Zv4AmKUS3beVzeEax8Pzp">Condiciones</a>
+        <a class="first-link" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjg0Z6975DrAhUulnIEHS77AQkQzq0CCBE&url=https%3A%2F%2Fwww.google.com%2Fpreferences%3Fhl%3Des-419&usg=AOvVaw0fdv-Qvh-6O8VNbQJz0FIZ">Preferencias</a>
+      </div>
+    </div>
+  </footer>
 </html>
